--- a/README.html
+++ b/README.html
@@ -596,7 +596,7 @@ be patient!</em></p>
 <td align="center">TA</td>
 <td align="center">Hannah Martin</td>
 <td align="center">n/a</td>
-<td align="center">TBD</td>
+<td align="center">Tuesdays 19:15 - 20:12</td>
 <td align="center">TBD</td>
 </tr>
 <tr class="odd">
@@ -604,7 +604,7 @@ be patient!</em></p>
 <td align="center">TA</td>
 <td align="center">Jason Bai</td>
 <td align="center">n/a</td>
-<td align="center">Mondays 17:00-18:00</td>
+<td align="center">Mondays 17:00 - 18:00</td>
 <td align="center">Zoom</td>
 </tr>
 <tr class="even">
