update links in the intro slides

--- a/slides/05_project_intro.slides.html
+++ b/slides/05_project_intro.slides.html
@@ -14970,12 +14970,12 @@ div.jp-OutputPrompt {
 </li>
 <li><p>Owner will follow the steps to add the rest of the group as Collaborators</p>
 <ul>
-<li><a href="https://datasciencebook.ca/Getting-started-with-version-control.html#collaboration">https://datasciencebook.ca/Getting-started-with-version-control.html#collaboration</a></li>
+<li><a href="https://python.datasciencebook.ca/version-control.html#collaboration">https://python.datasciencebook.ca/version-control.html#collaboration</a></li>
 </ul>
 </li>
 <li><p>Everyone in the group will clone the repository from the owner's repo into their JupyterHub</p>
 <ul>
-<li><a href="https://datasciencebook.ca/Getting-started-with-version-control.html#cloning-a-repository-using-jupyter">https://datasciencebook.ca/Getting-started-with-version-control.html#cloning-a-repository-using-jupyter</a></li>
+<li><a href="https://python.datasciencebook.ca/version-control.html#cloning-a-repository-using-jupyter">https://python.datasciencebook.ca/version-control.html#cloning-a-repository-using-jupyter</a></li>
 <li>Note: Put this in your home folder, <strong>DO NOT</strong> clone into your `dsci-100-student-python</li>
 </ul>
 <p>` folder. If you do, move it out.</p>
@@ -14998,7 +14998,7 @@ div.jp-OutputPrompt {
 <ul>
 <li>Find &amp; sit with your group members</li>
 <li>Introduce yourself (name, year, major, why you are interested in data science)</li>
-<li>Share what’s your best study tip</li>
+<li>Brainstorm a data-science themed team name</li>
 </ul>
 </li>
 <li><p>Visit the <code>group_contract</code> on canvas and fill out your group contract as a team!</p>
