--- a/README.html
+++ b/README.html
@@ -820,7 +820,8 @@ regression.</td>
 <tr class="odd">
 <td>10</td>
 <td>Quiz 2</td>
-<td>Cover classification 1 &amp; 2 and regression 1 &amp; 2</td>
+<td>Cover version control, classification 1 &amp; 2 and regression
+1</td>
 </tr>
 <tr class="even">
 <td>10</td>
