--- a/slides/01_intro_jupyter_py.slides.html
+++ b/slides/01_intro_jupyter_py.slides.html
@@ -7454,11 +7454,12 @@ main {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Teaching-Team-Introductions">Teaching Team Introductions<a class="anchor-link" href="#Teaching-Team-Introductions">¶</a></h2><h3 id="Instructors">Instructors<a class="anchor-link" href="#Instructors">¶</a></h3><!-- TODO bold your section -->
 <ul>
-<li>Section 003 (R) Trevor Campbell</li>
-<li>Section 004 (R) Eugenia Yu</li>
-<li>Section 008 (R) Vivian Meng</li>
-<li>Section 009 (R) Andy Tai</li>
-<li>Section 101 (Python) Rodolfo Lourenzutti</li>
+<li>Section 002 (R) Mon/Wed 15:30 - 17:00 Vivian Meng</li>
+<li>Section 005 (R) Tue/Thu 8:00 - 9:30 Katie Burak</li>
+<li>Section 006 (R) Tue/Thu 15:30 - 17:00 Vivian Meng</li>
+<li>Section 007 (R) Mon/Fri 15:00 - 16:30 Eugenia Yu</li>
+<li>Section 010 (R) Mon/Fri 16:00 - 17:30 Lasantha Premarathna</li>
+<li>Section 100 (Python) Tue/Thu 16:00 - 17:30 Eldad Haber</li>
 </ul>
 <p>Please refer to Workday for the time and location of the different sections.</p>
 </div>
